--- a/Documents/species_doc.ipynb
+++ b/Documents/species_doc.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "{'population': 50, 'size': 2, 'reproduction_number': [0, 1]}"
+       "{'population': 50, 'size': 2, 'reproduction_number': [0, 2]}"
       ]
      },
      "execution_count": 2,
@@ -131,17 +131,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'population': 50, 'size': 2, 'reproduction_number': [0, 1]},\n",
-       " {'population': 53, 'size': 1.947, 'reproduction_number': [0, 1]},\n",
-       " {'population': 56, 'size': 1.891, 'reproduction_number': [0, 1]},\n",
-       " {'population': 56, 'size': 1.835, 'reproduction_number': [0, 1]},\n",
-       " {'population': 56, 'size': 1.779, 'reproduction_number': [0, 1]},\n",
-       " {'population': 56, 'size': 1.7229999999999999, 'reproduction_number': [0, 1]},\n",
-       " {'population': 59, 'size': 1.664, 'reproduction_number': [0, 1]},\n",
-       " {'population': 62, 'size': 1.6019999999999999, 'reproduction_number': [0, 1]},\n",
-       " {'population': 62, 'size': 1.5399999999999998, 'reproduction_number': [0, 1]},\n",
-       " {'population': 62, 'size': 1.4779999999999998, 'reproduction_number': [0, 1]},\n",
-       " {'population': 62, 'size': 1.4159999999999997, 'reproduction_number': [0, 1]}]"
+       "[{'population': 50, 'size': 2, 'reproduction_number': [0, 2]},\n",
+       " {'population': 56, 'size': 1.944, 'reproduction_number': [0, 2]},\n",
+       " {'population': 62, 'size': 1.882, 'reproduction_number': [0, 2]},\n",
+       " {'population': 65, 'size': 1.817, 'reproduction_number': [0, 2]},\n",
+       " {'population': 65, 'size': 1.752, 'reproduction_number': [0, 2]},\n",
+       " {'population': 68, 'size': 1.684, 'reproduction_number': [0, 2]},\n",
+       " {'population': 68, 'size': 1.6159999999999999, 'reproduction_number': [0, 2]},\n",
+       " {'population': 71, 'size': 1.545, 'reproduction_number': [0, 2]},\n",
+       " {'population': 74, 'size': 1.4709999999999999, 'reproduction_number': [0, 2]},\n",
+       " {'population': 77, 'size': 1.394, 'reproduction_number': [0, 2]},\n",
+       " {'population': 83, 'size': 1.311, 'reproduction_number': [0, 2]}]"
       ]
      },
      "execution_count": 4,
