tester de land hecho, clase correcta

--- a/Documents/species_doc.ipynb
+++ b/Documents/species_doc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "('Humano', {'population': 1}, [])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "{'population': 50, 'size': 2, 'reproduction_number': [0, 2]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "[['reproduction_number', 'population', 3], ['population', 'size', -0.001]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,26 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'population': 50, 'size': 2, 'reproduction_number': [0, 2]},\n",
-       " {'population': 56, 'size': 1.944, 'reproduction_number': [0, 2]},\n",
-       " {'population': 62, 'size': 1.882, 'reproduction_number': [0, 2]},\n",
-       " {'population': 68, 'size': 1.8139999999999998, 'reproduction_number': [0, 2]},\n",
-       " {'population': 71, 'size': 1.7429999999999999, 'reproduction_number': [0, 2]},\n",
-       " {'population': 77, 'size': 1.666, 'reproduction_number': [0, 2]},\n",
-       " {'population': 83, 'size': 1.583, 'reproduction_number': [0, 2]},\n",
-       " {'population': 83, 'size': 1.5, 'reproduction_number': [0, 2]},\n",
-       " {'population': 83, 'size': 1.417, 'reproduction_number': [0, 2]},\n",
-       " {'population': 83, 'size': 1.334, 'reproduction_number': [0, 2]},\n",
-       " {'population': 89, 'size': 1.245, 'reproduction_number': [0, 2]}]"
+       " {'population': 50, 'size': 1.95, 'reproduction_number': [0, 2]},\n",
+       " {'population': 50, 'size': 1.9, 'reproduction_number': [0, 2]},\n",
+       " {'population': 53, 'size': 1.847, 'reproduction_number': [0, 2]},\n",
+       " {'population': 53, 'size': 1.794, 'reproduction_number': [0, 2]},\n",
+       " {'population': 59, 'size': 1.735, 'reproduction_number': [0, 2]},\n",
+       " {'population': 65, 'size': 1.6700000000000002, 'reproduction_number': [0, 2]},\n",
+       " {'population': 71, 'size': 1.5990000000000002, 'reproduction_number': [0, 2]},\n",
+       " {'population': 71, 'size': 1.5280000000000002, 'reproduction_number': [0, 2]},\n",
+       " {'population': 77, 'size': 1.4510000000000003, 'reproduction_number': [0, 2]},\n",
+       " {'population': 83, 'size': 1.3680000000000003, 'reproduction_number': [0, 2]}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
