--- a/Documents/land_doc.ipynb
+++ b/Documents/land_doc.ipynb
@@ -4,23 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentación de la clase Specie\n",
+    "## Documentación de la clase Land\n",
     "\n",
-    "Con esta clase definimos nuestra specie, esta consta de un nombre, que es pasado por argumento al crear una instancia, adicionalmente tiene **características** y **dependencias**. Por defecto se crea una característica \"*population*\" con valor 1, la que puede modificarse y/o eliminar si así se desea."
+    "Con esta clase definimos nuestra \"tierra\" o el mapa, esta consta de **características** y **dependencias**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Humano', {'population': 1}, [])"
+       "({}, [])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,11 +29,11 @@
     "import os\n",
     "from sys import path\n",
     "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
-    "from species import Species\n",
+    "from land import Land\n",
     "\n",
-    "humano = Species('Humano')\n",
+    "terreno = Land()\n",
     "\n",
-    "(humano.name, humano.characteristic, humano.characteristic_dependences)"
+    "(terreno.characteristic, terreno.characteristic_dependences)"
    ]
   },
   {
@@ -41,35 +41,36 @@
    "metadata": {},
    "source": [
     "### Características\n",
-    "Una especie posee una lista de **características** propias como pueden ser población, tamaño, natalidad, economía, etc. \n",
+    "Un terreno posee una lista de **características** propias como pueden ser recursos actuales, capacidad, fertilidad, temperatura, altura, etc. \n",
     "\n",
     "La misma es representada como una diccionario y se puede interactuar con ella usando los métodos *Change_Characteristic* el que recibe como entrada el nombre de la característica y su valor, si existe la modifica sino se agrega, y el método *Delete_Characteristic* que recibe de entrada el nombre de la característica que quieres borrar y la elimina. Las características pueden tomar valor numérico o rangos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'population': 50, 'size': 2, 'reproduction_number': [0, 2]}"
+       "{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "humano.Change_Characteristic('population', 50)\n",
-    "humano.Change_Characteristic('size', 3)\n",
-    "humano.Delete_Characteristic('size')\n",
-    "humano.Change_Characteristic('size', 2)\n",
-    "humano.Change_Characteristic('reproduction_number', [0,2])\n",
+    "terreno.Change_Characteristic('actual_resources', 500)\n",
+    "terreno.Change_Characteristic('fertility', 3)\n",
+    "terreno.Delete_Characteristic('fertility')\n",
+    "terreno.Change_Characteristic('fertility', [2,8])\n",
+    "terreno.Change_Characteristic('fertility', [25,60])\n",
+    "terreno.Change_Characteristic('temperature', 25)\n",
     "    \n",
-    "humano.characteristic"
+    "terreno.characteristic"
    ]
   },
   {
@@ -78,7 +79,7 @@
    "source": [
     "### Dependences\n",
     "\n",
-    "Una especie puede además poseer **dependencias** entre las características para expresar por ejemplo como influye la natalidad en la población al pasar un día, o como influye el avance médico en la esperanza de vida\n",
+    "Un terreno puede además poseer **dependencias** entre las características para expresar por ejemplo como influye la natalidad en la población al pasar un día, o como influye el avance médico en la esperanza de vida\n",
     "Estas dependencias son representadas con una lista de listas.\n",
     "\n",
     "Cada dependencia es una lista de 3 elementos: característica a, característica b, c. \n",
@@ -90,28 +91,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['reproduction_number', 'population', 3], ['population', 'size', -0.001]]"
+       "[['temperature', 'fertility', -0.15],\n",
+       " ['actual_resources', 'actual_resources', 0.05],\n",
+       " ['fertility', 'actual_resources', 5.5]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "humano.Add_Dependences('reproduction_number', 'population', 3)\n",
-    "humano.Add_Dependences('population', 'population', 5)\n",
-    "humano.Add_Dependences('population', 'size', 0.1)\n",
-    "humano.Change_Dependences_Value('population', 'size', -0.001)\n",
-    "humano.Delete_Dependences('population', 'population')\n",
+    "terreno.Add_Dependences('temperature', 'fertility', 3)\n",
+    "terreno.Add_Dependences('actual_resources', 'actual_resources', 0.05)\n",
+    "terreno.Add_Dependences('fertility', 'actual_resources', 5.5)\n",
+    "terreno.Add_Dependences('actual_resources', 'fertility', 0.001)\n",
+    "terreno.Change_Dependences_Value('temperature', 'fertility', -0.15)\n",
+    "terreno.Delete_Dependences('actual_resources', 'fertility')\n",
     "\n",
-    "humano.characteristic_dependences"
+    "terreno.characteristic_dependences"
    ]
   },
   {
@@ -125,36 +129,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'population': 50, 'size': 2, 'reproduction_number': [0, 2]},\n",
-       " {'population': 50, 'size': 1.95, 'reproduction_number': [0, 2]},\n",
-       " {'population': 50, 'size': 1.9, 'reproduction_number': [0, 2]},\n",
-       " {'population': 53, 'size': 1.847, 'reproduction_number': [0, 2]},\n",
-       " {'population': 53, 'size': 1.794, 'reproduction_number': [0, 2]},\n",
-       " {'population': 59, 'size': 1.735, 'reproduction_number': [0, 2]},\n",
-       " {'population': 65, 'size': 1.6700000000000002, 'reproduction_number': [0, 2]},\n",
-       " {'population': 71, 'size': 1.5990000000000002, 'reproduction_number': [0, 2]},\n",
-       " {'population': 71, 'size': 1.5280000000000002, 'reproduction_number': [0, 2]},\n",
-       " {'population': 77, 'size': 1.4510000000000003, 'reproduction_number': [0, 2]},\n",
-       " {'population': 83, 'size': 1.3680000000000003, 'reproduction_number': [0, 2]}]"
+       "[{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25},\n",
+       " {'actual_resources': 679.0, 'fertility': [21.25, 56.25], 'temperature': 25},\n",
+       " {'actual_resources': 943.95, 'fertility': [17.5, 52.5], 'temperature': 25},\n",
+       " {'actual_resources': 1073.6475,\n",
+       "  'fertility': [13.75, 48.75],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 1187.8298750000001,\n",
+       "  'fertility': [10.0, 45.0],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 1379.2213687500002,\n",
+       "  'fertility': [6.25, 41.25],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 1618.6824371875002,\n",
+       "  'fertility': [2.5, 37.5],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 1809.6165590468752,\n",
+       "  'fertility': [-1.25, 33.75],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 1993.597386999219,\n",
+       "  'fertility': [-5.0, 30.0],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 2203.27725634918,\n",
+       "  'fertility': [-8.75, 26.25],\n",
+       "  'temperature': 25},\n",
+       " {'actual_resources': 2318.941119166639,\n",
+       "  'fertility': [-12.5, 22.5],\n",
+       "  'temperature': 25}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "time_line = [humano.characteristic.copy()]\n",
+    "time_line = [terreno.characteristic.copy()]\n",
     "for i in range(10):\n",
     "    # Avanza un día la simulación\n",
-    "    humano.Move_One_Day()\n",
-    "    time_line.append(humano.characteristic.copy())\n",
+    "    terreno.Move_One_Day()\n",
+    "    time_line.append(terreno.characteristic.copy())\n",
     "    \n",
     "time_line"
    ]
