--- a/Documents/society_doc.ipynb
+++ b/Documents/society_doc.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentación de la clase Species\n",
+    "## Documentación de la clase Society\n",
     "\n",
     "Con esta clase definimos nuestra \"sociedad\", esta consta de **características**."
    ]
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "('Humano', {'population': 1}, [])"
+       "{'Población': <Simulation.characteristic.Characteristic at 0x245ea9df670>}"
       ]
      },
      "execution_count": 1,
@@ -29,12 +29,40 @@
     "import os\n",
     "from sys import path\n",
     "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
-    "from species import Species\n",
+    "from Simulation.society import Society\n",
+    "from Simulation.species import Species\n",
     "\n",
-    "humano = Species('Humano')\n",
+    "humanidad = Species(\"humanidad\")\n",
+    "society = Society(\"cubano\", humanidad)\n",
     "\n",
-    "(humano.name, humano.characteristic, humano.characteristic_dependences)"
+    "society.characteristic"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Características\n",
+    "Un terreno posee una lista de **características** propias como pueden ser recursos actuales, capacidad, fertilidad, temperatura, altura, etc. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'actual_resources': 500, 'fertility': [25, 60], 'temperature': 25}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
@@ -56,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
