--- a/Documents/semantic_doc.ipynb
+++ b/Documents/semantic_doc.ipynb
@@ -4,36 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Documentación de la clase Species\n",
-    "\n",
-    "Con esta clase definimos nuestra \"sociedad\", esta consta de **características**."
+    "## Documentación del checkeo semático\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Humano', {'population': 1}, [])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from sys import path\n",
     "path.append(os.path.abspath(os.path.join('',os.pardir)))\n",
-    "from species import Species\n",
-    "\n",
-    "humano = Species('Humano')\n",
-    "\n",
-    "(humano.name, humano.characteristic, humano.characteristic_dependences)"
+    "from Compilacion.grammar import build_grammar\n"
    ]
   }
  ],
@@ -56,7 +39,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
