Annadiendo function_name al ast

--- a/Documents/land_doc.ipynb
+++ b/Documents/land_doc.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "({'': <Simulation.land.Land at 0x2286b7c2110>}, {}, [])"
+       "({'': <Simulation.land.Land at 0x19b0c4841f0>}, {}, [])"
       ]
      },
      "execution_count": 1,
@@ -57,9 +57,9 @@
     {
      "data": {
       "text/plain": [
-       "{'': <Simulation.land.Land at 0x2286b7c2110>,\n",
-       " 'cubano': <Simulation.society.Society at 0x2286b7c2980>,\n",
-       " 'español': <Simulation.society.Society at 0x2286b7c2410>}"
+       "{'': <Simulation.land.Land at 0x19b0c4841f0>,\n",
+       " 'cubano': <Simulation.society.Society at 0x19b0c484c70>,\n",
+       " 'español': <Simulation.society.Society at 0x19b0c4847f0>}"
       ]
      },
      "execution_count": 2,
@@ -113,20 +113,29 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'actual_resources': <Simulation.characteristic.Characteristic at 0x22871b0ec20>,\n",
-       " 'temperature': <Simulation.characteristic.Characteristic at 0x22871b0f040>}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Land has not deleted characteristic: fertility\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Land already has not the characteristic: fertility",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m terreno\u001b[38;5;241m.\u001b[39mChange_Characteristic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfertility\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      3\u001b[0m terreno\u001b[38;5;241m.\u001b[39mDelete_Characteristic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfertility\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mterreno\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDelete_Characteristic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfertility\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m terreno\u001b[38;5;241m.\u001b[39mChange_Characteristic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfertility\u001b[39m\u001b[38;5;124m'\u001b[39m, [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m8\u001b[39m])\n\u001b[0;32m      6\u001b[0m terreno\u001b[38;5;241m.\u001b[39mChange_Characteristic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfertility\u001b[39m\u001b[38;5;124m'\u001b[39m, [\u001b[38;5;241m25\u001b[39m,\u001b[38;5;241m60\u001b[39m])\n",
+      "File \u001b[1;32mc:\\Users\\Airelys\\Desktop\\New folder (3)\\RoadToCivilization\\Simulation\\land.py:118\u001b[0m, in \u001b[0;36mLand.Delete_Characteristic\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    116\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m    117\u001b[0m logging\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLand has not deleted characteristic: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, name)\n\u001b[1;32m--> 118\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLand already has not the characteristic: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name)\n",
+      "\u001b[1;31mException\u001b[0m: Land already has not the characteristic: fertility"
+     ]
     }
    ],
    "source": [
     "terreno.Change_Characteristic('actual_resources', 500)\n",
     "terreno.Change_Characteristic('fertility', 3)\n",
+    "terreno.Delete_Characteristic('fertility')\n",
     "terreno.Delete_Characteristic('fertility')\n",
     "terreno.Change_Characteristic('fertility', [2,8])\n",
     "terreno.Change_Characteristic('fertility', [25,60])\n",
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
